<resources>
    <string name="app_name">E-Charity</string>
    <!--    <string name="KOMMUNICATE_APP_ID">29613c61c751963d7ff7465a4812caf81</string>-->
    <string name="KOMMUNICATE_APP_ID">98cc6d6f081cfeccf2e0a1edb7c0a358</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile"><Pr>    </Pr>ofile</string>
    <string name="menu_add_post">New Post</string>
    <string name="menu_map">Map</string>
    <string name="menu_chat">Chat</string>

    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_out">Sign Out</string>
    <string name="label_location_picker">Select a location</string>
    <string name="label_">Select a location</string>

    <string name="btn_label_done">Done</string>
    <string name="btn_label_add_post">Add New Post</string>
    <string name="btn_label_chatbot">Ask Your Questions From the AI Chatbot!</string>


    <string name="label_login_to_account">Login to account</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_q_forgot_password">Forgot Password?</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_don_t_have_an_account">Don\'t have an account?</string>
    <string name="label_first_name">First Name</string>
    <string name="label_last_name">Last Name</string>
    <string name="label_confirm_pwd">Confirm Password</string>
    <string name="label_already_account">Already have an account?</string>

    <string name="msg_sign_out">Are you sure you want to sign out?</string>
    <string name="msg_gps_dialog_title">Location Service</string>
    <string name="msg_gps_provider">GPS need to be turned on for the app to continue</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_post">Title</string>
    <string name="title_category">Category</string>
    <string name="title_description">Description</string>
    <string name="title_location">Location</string>
    <string name="title_image">Post Image(Optional)</string>

    <string name="hint_post">Enter Your Title Here</string>
    <string name="hint_location">Tap to add location</string>
    <string name="hint_description_victim">Please explain more about your requirements and about the help you need in detail here</string>
    <string name="hint_description_donor">Please explain more about your donation scale, who you are going to donate, etc in here</string>
    <string name="title_activity_location_picker">Map</string>


</resources>
