<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.post.AddPostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_addpost"
        style="@style/AppToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/colorWhite" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/add_post_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_title"
                style="@style/TitleTextBlackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_post"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_title"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:ems="10"
                android:hint="@string/hint_post"
                android:inputType="textPersonName"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_title" />

            <TextView
                android:id="@+id/tv_category"
                style="@style/TitleTextBlackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_category"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_title" />

            <Spinner
                android:id="@+id/spinner_category"
                android:background="@drawable/bg_spinner"
                android:theme="@style/ThemeOverlay.AppCompat.Light"
                android:spinnerMode="dropdown"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="38dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="@id/et_title"
                app:layout_constraintStart_toStartOf="@id/tv_category"
                app:layout_constraintTop_toBottomOf="@id/tv_category" />

            <TextView
                android:id="@+id/tv_description"
                style="@style/TitleTextBlackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinner_category" />

            <EditText
                android:id="@+id/et_description"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/hint_description_victim"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:padding="8dp"
                android:paddingTop="8dp"
                android:textAlignment="textStart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_description"
                app:layout_constraintTop_toBottomOf="@+id/tv_description" />

            <TextView
                android:id="@+id/tv_image"
                style="@style/TitleTextBlackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_description" />

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/bg_dotted_border"
                android:minHeight="100dp"
                android:src="@drawable/ic_placeholder_add_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.25"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_image" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TitleTextBlackStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:text="@string/title_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/et_location"
                style="@style/editTextStyle"
                android:layout_width="0dp"
                android:layout_height="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:ems="10"
                android:hint="@string/hint_location"
                android:inputType="none"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tv_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_location" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/fl_mapview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:visibility="gone"
                android:focusableInTouchMode="false"
                android:clickable="false"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.20"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_location"
                app:layout_constraintBottom_toTopOf="@id/btn_addpost" />

            <Button
                android:id="@+id/btn_addpost"
                style="@style/PrimaryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:text="@string/btn_label_add_post"
                app:layout_constraintTop_toBottomOf="@id/fl_mapview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>